# bluez-sample-dbus

./: .gitignore  CMakeLists.txt  DeleteDevices.sh  Doxyfile  README.md  main.cpp  main.h
.github/workflows/: cmake-single-platform.yml
Inc/: AdapterHelper.h  DeviceHelper.h
Int/: IAdapter.h  IAgent.h  IDevice.h  IDeviceManager.h
Src/: Application.cpp  Application.h
Src/Adapter/: Adapter.cpp  Adapter.h  AdapterProxy.cpp  AdapterProxy.h
Src/Agent/: Agent.cpp  Agent.h  AgentProxy.cpp  AgentProxy.h
Src/AgentManager/: AgentManager.cpp  AgentManager.h  AgentManagerProxy.cpp  AgentManagerProxy.h
Src/Device/: Device.cpp  Device.h  DeviceProxy.cpp  DeviceProxy.h
Src/DeviceManager/: DeviceManager.cpp  DeviceManager.h
Src/Logger/: Logger.cpp  Logger.h
Src/Menu/: Menu.cpp  Menu.h
Src/ObjectManager/: ObjectManagerProxy.cpp  ObjectManagerProxy.h
Src/Profile/: ProfileProxy.cpp  ProfileProxy.h
Src/ProfileManager/: ProfileManager.cpp  ProfileManager.h  ProfileManagerProxy.cpp  ProfileManagerProxy.h
Src/SPPHandler/: SPPHandler.cpp  SPPHandler.h
Src/Utilities/: Utilities.cpp  Utilities.h
conf/: org.gokul.service
xml/: Adapter1.xml  Device1.xml  GattService1.xml  Profile1.xml
